# bevy_doodling

./: .gitignore  Cargo.toml  flake.nix  old.rs  result
assets/: compute.wgsl  pinetree.glb  terrain.wgsl  terrain_prepass.wgsl  wireframe.wgsl
src/: main.rs
src/lod/: mod.rs
