[package]
name = "lod"
version = "0.1.0"
edition = "2024"

[dependencies]
# bevy = { version = "0.15", features = ["bevy_dev_tools", "dynamic_linking", "bevy_image"] }
bevy = { version = "=0.16.0-rc.3", features = ["bevy_dev_tools", "dynamic_linking"] }
kdtree = "0.7.0"
noise = "0.9.0"
noisy_bevy = "0.8.0"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
